@@ -21,9 +21,9 @@
 (define-macro (define-record-type record-name 
                                    make-proto pred-name . record-fields)
               (let ((tc (make-tc)))
-                (tc-splice! tc (list 'define-class record-name '<object>))
-                (tc-splice! tc (list make-proto pred-name))
-                (tc-splice! tc record-fields)
+                (tc-append! tc (list 'define-class record-name '<object>))
+                (tc-append! tc (list make-proto pred-name))
+                (tc-append! tc record-fields)
                 (tc->list tc)))
    ;`(define-class ,record-name <object> ,make-proto ,pred-name 
    ;               ,@record-fields))
